fix: 修复复制 proxysql MGR 视图 SQL 到远程机器的不幂等问题

--- a/tasks/group_replication.yaml
+++ b/tasks/group_replication.yaml
@@ -54,7 +54,7 @@
     mode: "0600"
     owner: root
     group: root
-  run_once: true
+  # run_once: true
   delegate_to: "{{ _primary_node }}"
   when:
     - mysql_proxysql_config|bool
