--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,4 +45,4 @@ jobs:
           molecule test --scenario-name ${MOLECULE_SCENARIO}
       - name: Publish role to Galaxy
         if: success()
-        run: ansible-galaxy role import --api-key ${{ secrets.ANSIBLE_GALAXY_API_KEY }} $(echo $GITHUB_REPOSITORY | cut -d/ -f1) $(echo $GITHUB_REPOSITORY | cut -d/ -f2)
+        run: ansible-galaxy role import --branch main --api-key ${{ secrets.ANSIBLE_GALAXY_API_KEY }} $(echo $GITHUB_REPOSITORY | cut -d/ -f1) $(echo $GITHUB_REPOSITORY | cut -d/ -f2)
