--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-mysql_version: 8.0.25
-mysql_download_url: https://cdn.mysql.com/Downloads/MySQL-8.0/mysql-{{ mysql_version }}-el{{ ansible_distribution_major_version }}-x86_64.tar.gz
+mysql_version: 8.0.28
+mysql_download_url: https://cdn.mysql.com/Downloads/MySQL-8.0/mysql-{{ mysql_version }}-linux-glibc2.17-x86_64-minimal.tar.gz
 mysql_shell_download_url: https://cdn.mysql.com/Downloads/MySQL-Shell/mysql-shell-{{ mysql_version }}-1.el{{ ansible_distribution_major_version }}.x86_64.rpm
 mysql_mha_version: 0.58
 mysql_mha_manager_download_url: https://github.com/yoshinorim/mha4mysql-manager/releases/download/v{{ mysql_mha_version }}/mha4mysql-manager-{{ mysql_mha_version }}-0.el7.centos.noarch.rpm
@@ -30,6 +30,8 @@ mysql_max_connect_errors: 200
 mysql_skip_name_resolve: "ON"
 mysql_wait_timeout: 28800
 mysql_interactive_timeout: 28800
+mysql_tls_version: TLSv1.2,TLSv1.3
+mysql_admin_tls_version: TLSv1.2,TLSv1.3
 
 # 集群类型:
 ## mgr (Mysql Group Replication): 组复制
