--- a/molecule/master_slave/molecule.yml
+++ b/molecule/master_slave/molecule.yml
@@ -9,7 +9,7 @@ driver:
 platforms:
   - name: mysql1
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
@@ -18,7 +18,7 @@ platforms:
       - mysql
   - name: mysql2
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
@@ -28,7 +28,7 @@ platforms:
       - mysql
   - name: mysql3
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
