--- a/molecule/mha/molecule.yml
+++ b/molecule/mha/molecule.yml
@@ -3,13 +3,14 @@ dependency:
   name: galaxy
 driver:
   name: docker
-# lint: |
-#   set -e
-#   ansible-lint -v
+lint: |
+  set -e
+  yamllint .
+  ansible-lint -v
 platforms:
   - name: mysql1
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
@@ -21,7 +22,7 @@ platforms:
       - mha_node
   - name: mysql2
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
@@ -34,7 +35,7 @@ platforms:
       - mha_node
   - name: mysql3
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
@@ -47,7 +48,7 @@ platforms:
       - mha_node
   - name: mha4mysql-manager
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
