--- a/molecule/standalone/molecule.yml
+++ b/molecule/standalone/molecule.yml
@@ -9,7 +9,7 @@ driver:
 platforms:
   - name: mysql1
     image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ""
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
