--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [centos7]
-        mysql-version: [8.0.27, 8.0.28]
+        mysql-version: [8.0.28, 8.0.29, 8.0.30]
         scenario: [single_primary, multi_primary, master_slave, mha, standalone]
     steps:
       - name: Checkout
