--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-mysql_version: 8.0.28
-mysql_download_url: https://cdn.mysql.com/Downloads/MySQL-8.0/mysql-{{ mysql_version }}-linux-glibc2.17-x86_64-minimal.tar.xz
-mysql_shell_download_url: https://cdn.mysql.com/Downloads/MySQL-Shell/mysql-shell-{{ mysql_version }}-1.el{{ ansible_distribution_major_version }}.x86_64.rpm
+mysql_version: 8.0.34
+mysql_privoder: oracle # greatsql
+mysql_shell_version:
 mysql_mha_version: 0.58
 mysql_mha_manager_download_url: https://github.com/yoshinorim/mha4mysql-manager/releases/download/v{{ mysql_mha_version }}/mha4mysql-manager-{{ mysql_mha_version }}-0.el7.centos.noarch.rpm
 mysql_mha_node_download_url: https://github.com/yoshinorim/mha4mysql-node/releases/download/v{{ mysql_mha_version }}/mha4mysql-node-{{ mysql_mha_version }}-0.el7.centos.noarch.rpm
