--- a/tasks/check_vars.yaml
+++ b/tasks/check_vars.yaml
@@ -1,8 +1,7 @@
 ---
 - name: Get installed version
-  command:
+  ansible.builtin.command:
     cmd: '{{ mysql_basedir }}/bin/mysql --silent --skip-column-names -e "SELECT VERSION()";'
-    warn: false
   changed_when: false
   check_mode: false
   register: _mysql_installed_version
@@ -11,14 +10,14 @@
     - inventory_hostname in groups[mysql_inventory_group]
 
 - name: Add variable mysql_installed_version
-  set_fact:
-    mysql_installed_version: "{{ _mysql_installed_version.stdout.split('-') | first }}"
+  ansible.builtin.set_fact:
+    mysql_installed_version: "{{ _mysql_installed_version.stdout.strip() }}"
   when:
     - inventory_hostname in groups[mysql_inventory_group]
     - _mysql_installed_version is not failed
 
 - name: Failed if mysql_version is not equal the installed version
-  fail:
+  ansible.builtin.fail:
     msg: "The version expected to be installed is {{ mysql_version }}, but already installed version {{ mysql_installed_version }}, You can perform the upgrade by adding `mysql_upgrade=true`"
   when:
     - inventory_hostname in groups[mysql_inventory_group]
@@ -27,7 +26,7 @@
     - mysql_version is not version(mysql_installed_version, 'eq')
 
 - name: Failed if mysql_version is less than the installed version (upgrade is enabled)
-  fail:
+  ansible.builtin.fail:
     msg: "mysql_version({{ mysql_version }}) cannot be less than the installed version {{ mysql_installed_version }}"
   when:
     - inventory_hostname in groups[mysql_inventory_group]
@@ -36,12 +35,12 @@
     - mysql_version is version(mysql_installed_version, '<')
 
 - name: Check mysql_root_password
-  assert:
+  ansible.builtin.assert:
     that:
       - mysql_root_password|string|length > 0
 
 - name: Check mysql_repl_password
-  assert:
+  ansible.builtin.assert:
     that:
       - mysql_repl_password|string|length > 0
   when:
@@ -49,14 +48,14 @@
     - groups[mysql_inventory_group]|length > 1
 
 - name: Check mysql_group_replication_name
-  assert:
+  ansible.builtin.assert:
     that:
       - mysql_group_replication_name|string|length > 0
   when:
     - mysql_cluster_type == 'mgr'
 
 - name: Check mysql_innodb_cluster_password
-  assert:
+  ansible.builtin.assert:
     that:
       - mysql_innodb_cluster_password|string|length > 0
   when:
@@ -64,7 +63,7 @@
     - mysql_innodb_cluster_enable|bool
 
 - name: Check mysql_proxysql_monitor_password
-  assert:
+  ansible.builtin.assert:
     that:
       - mysql_proxysql_monitor_password|string|length > 0
   when:
