--- a/molecule/mha/molecule.yml
+++ b/molecule/mha/molecule.yml
@@ -9,10 +9,10 @@ lint: |
   ansible-lint -v
 platforms:
   - name: mysql1
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    image: verystar/${MOLECULE_DISTRO:-centos:7}
+    command: ${MOLECULE_DOCKER_COMMAND:-"/usr/sbin/init"}
+    # volumes:
+    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
     groups:
@@ -21,10 +21,10 @@ platforms:
       - mysql
       - mha_node
   - name: mysql2
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    image: verystar/${MOLECULE_DISTRO:-centos:7}
+    command: ${MOLECULE_DOCKER_COMMAND:-"/usr/sbin/init"}
+    # volumes:
+    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
     purge_networks: false
@@ -34,10 +34,10 @@ platforms:
       - mysql
       - mha_node
   - name: mysql3
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    image: verystar/${MOLECULE_DISTRO:-centos:7}
+    command: ${MOLECULE_DOCKER_COMMAND:-"/usr/sbin/init"}
+    # volumes:
+    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
     purge_networks: false
@@ -47,10 +47,10 @@ platforms:
       - mysql
       - mha_node
   - name: mha4mysql-manager
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-centos7}-ansible:latest
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    image: verystar/${MOLECULE_DISTRO:-centos:7}
+    command: ${MOLECULE_DOCKER_COMMAND:-"/usr/sbin/init"}
+    # volumes:
+    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
     purge_networks: false
@@ -60,10 +60,10 @@ platforms:
       - mha_manager
 provisioner:
   name: ansible
-  inventory:
-    group_vars:
-      mha:
-        mysql_download_url: ${MOLECULE_MYSQL_DOWNLOAD_URL}
+  # inventory:
+  #   group_vars:
+  #     mha:
+  #       mysql_download_url: ${MOLECULE_MYSQL_DOWNLOAD_URL}
   config_options:
     defaults:
       verbosity: 2
