--- a/tasks/create_database.yaml
+++ b/tasks/create_database.yaml
@@ -2,8 +2,8 @@
 - name: Ensure business databases
   community.mysql.mysql_db:
     name: "{{ item.name }}"
-    collation: "{{ item.collation | default('utf8mb4_general_ci') }}"
-    encoding: "{{ item.encoding | default('utf8mb4') }}"
+    collation: "{{ item.collation | default(mysql_collation_server) | default('utf8mb4_general_ci') }}"
+    encoding: "{{ item.encoding | default(mysql_character_set_server) | default('utf8mb4') }}"
     single_transaction: "{{ item.single_transaction | default(omit) }}"
     state: "{{ item.state | default('present') }}"
   loop: "{{ mysql_databases }}"
