--- a/vars/main.yml
+++ b/vars/main.yml
@@ -9,8 +9,17 @@ __mysql_dependencies:
     - numactl
     - numactl-libs
     - python2-PyMySQL
+    - python2-cryptography
     - pyOpenSSL
     - jemalloc-devel
+    - gcc
+    - gcc-c++
+    - automake
+    - autoconf
+    - bzip2
+    # for mysql-shell
+    - python36-devel
+    - python36-certifi
   RedHat_8:
     - tzdata
     - openssl
@@ -21,4 +30,20 @@ __mysql_dependencies:
     - python3-PyMySQL
     - python3-pyOpenSSL
     - jemalloc-devel
+    - gcc
+    - gcc-c++
+    - automake
+    - autoconf
+    - bzip2
 mysql_dependencies: "{{ __mysql_dependencies[ansible_os_family+'_'+ansible_distribution_major_version] }}"
+mysql_glibc_version: "{{ '2.17' if ansible_distribution_major_version == '7' else '2.28' }}"
+
+__mysql_download_url:
+  oracle:
+    mysql_url: https://cdn.mysql.com/Downloads/MySQL-8.0/mysql-{{ mysql_version }}-linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}-minimal.tar.xz
+    mysql_shell_url: https://cdn.mysql.com/Downloads/MySQL-Shell/mysql-shell-{{ mysql_version }}-linux-glibc{{ mysql_glibc_version }}-{{ 'x86' if ansible_architecture == 'x86_64' else 'arm' }}-{{ ansible_userspace_bits }}bit.tar.gz
+  greatsql:
+    mysql_url: https://product.greatdb.com/GreatSQL-{{ mysql_version }}/GreatSQL-{{ mysql_version }}-Linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}-minimal.tar.xz
+    mysql_shell_url: https://product.greatdb.com/GreatSQL-{{ mysql_shell_version | default(mysql_version) }}/greatsql-shell-{{ mysql_shell_version | default(mysql_version) }}-Linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}.tar.xz
+mysql_download_url: "{{ __mysql_download_url[mysql_privoder].mysql_url }}"
+mysql_shell_download_url: "{{ __mysql_download_url[mysql_privoder].mysql_shell_url }}"
