ci(github actions): 修复matrix 变量
Signed-off-by: Xijun Dai <daixijun1990@gmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
       ANSIBLE_FORCE_COLOR: 1 # allows ansible colors to be passed to GitHub Actions
     strategy:
       matrix:
-        os: [verystar/centos:7]
+        os: ["verystar/centos:7"]
         mysql-version: [8.0.34]
         scenario: [single_primary, standalone]
     steps:
