fix(tasks/create_user.yaml): Add proxysql monitor user priv
Signed-off-by: Xijun Dai <daixijun1990@gmail.com>

--- a/tasks/create_user.yaml
+++ b/tasks/create_user.yaml
@@ -20,7 +20,8 @@
     host: "%"
     priv:
       "*.*": USAGE,REPLICATION CLIENT
-      "sys.*": SELECT
+      "performance_schema.replication_group_member_stats": SELECT
+      "performance_schema.replication_group_members": SELECT
     state: present
   run_once: true
   delegate_to: "{{ _primary_node }}"
