--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -28,8 +28,71 @@
     - /sys/kernel/mm/transparent_hugepage/enabled
     - /sys/kernel/mm/transparent_hugepage/defrag
 
+- name: Check /etc/rc.local file
+  ansible.builtin.stat:
+    path: /etc/rc.local
+  register: _rc_local_status
+  when:
+    - ansible_distribution == 'Ubuntu'
+    - ansible_distribution_major_version | int >= 16
+
+- name: Update /etc/rc.local
+  ansible.builtin.copy:
+    content: |
+      #!/bin/bash
+      #
+      # This script is executed at the end of each multiuser runlevel.
+      # Make sure that the script will "exit 0" on success or any other
+      # value on error.
+      #
+      # In order to enable or disable this script just change the execution
+      # bits.
+      #
+      # By default this script does nothing.
+
+      exit 0
+    dest: /etc/rc.local
+    force: false
+    mode: "0755"
+    owner: root
+    group: root
+  when:
+    - ansible_distribution == 'Ubuntu'
+    - ansible_distribution_major_version | int >= 16
+    - not _rc_local_status.stat.exists
+
+- name: Update rc-local.service
+  community.general.ini_file:
+    path: /lib/systemd/system/rc-local.service
+    section: Install
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+    no_extra_spaces: true
+    backup: yes
+    mode: "0644"
+    owner: root
+    group: root
+  loop:
+    - option: WantedBy
+      value: multi-user.target
+    - option: Alias
+      value: rc-local.service
+  when:
+    - ansible_distribution == 'Ubuntu'
+    - ansible_distribution_major_version | int >= 16
+
+- name: Enable rc-local.service
+  ansible.builtin.systemd:
+    name: rc-local.service
+    enabled: true
+    state: started
+    daemon_reload: true
+  when:
+    - ansible_distribution == 'Ubuntu'
+    - ansible_distribution_major_version | int >= 16
+
 - name: Disable Transparent Huge Pages (THP) forever
-  blockinfile:
+  ansible.builtin.blockinfile:
     marker: "# {mark} Disable Transparent Huge Pages"
     block: |
       if test -f /sys/kernel/mm/transparent_hugepage/enabled; then
@@ -39,6 +102,7 @@
         echo never > /sys/kernel/mm/transparent_hugepage/defrag
       fi
     path: /etc/rc.local
+    insertbefore: "^^(\\s+)?exit\\s+0"
     state: present
 
 - name: Installing mysql dependencies
