--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,6 +2,8 @@
 # vars file for mysql
 __mysql_dependencies:
   RedHat_7:
+    - iproute
+    - iputils
     - tzdata
     - openssl
     - openssl-devel
@@ -21,6 +23,8 @@ __mysql_dependencies:
     - python36-devel
     - python36-certifi
   RedHat_8:
+    - iproute
+    - iputils
     - tzdata
     - openssl
     - openssl-devel
@@ -35,15 +39,33 @@ __mysql_dependencies:
     - automake
     - autoconf
     - bzip2
-mysql_dependencies: "{{ __mysql_dependencies[ansible_os_family+'_'+ansible_distribution_major_version] }}"
+  Debian:
+    - iproute2
+    - iputils-ping
+    - tzdata
+    - libaio1
+    - libnuma1
+    - python3-pymysql
+    - python3-cryptography
+    - python3-openssl
+    - libjemalloc2
+    - libjemalloc-dev
+    - build-essential
+    - automake
+    - autoconf
+    - bzip2
+    # for mysql-shell
+    - python3-dev
+    - python3-certifi
+mysql_dependencies: "{{ __mysql_dependencies[ansible_os_family+'_'+ansible_distribution_major_version] | default(__mysql_dependencies[ansible_os_family]) | default([]) }}"
 mysql_glibc_version: "{{ '2.17' if ansible_distribution_major_version == '7' else '2.28' }}"
 
 __mysql_download_url:
   oracle:
-    mysql_url: https://cdn.mysql.com/Downloads/MySQL-8.0/mysql-{{ mysql_version }}-linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}-minimal.tar.xz
+    mysql_url: https://cdn.mysql.com/Downloads/MySQL-8.0/mysql-{{ mysql_version }}-linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}.tar.xz
     mysql_shell_url: https://cdn.mysql.com/Downloads/MySQL-Shell/mysql-shell-{{ mysql_version }}-linux-glibc{{ mysql_glibc_version }}-{{ 'x86' if ansible_architecture == 'x86_64' else 'arm' }}-{{ ansible_userspace_bits }}bit.tar.gz
   greatsql:
-    mysql_url: https://product.greatdb.com/GreatSQL-{{ mysql_version }}/GreatSQL-{{ mysql_version }}-Linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}-minimal.tar.xz
+    mysql_url: https://product.greatdb.com/GreatSQL-{{ mysql_version }}/GreatSQL-{{ mysql_version }}-Linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}.tar.xz
     mysql_shell_url: https://product.greatdb.com/GreatSQL-{{ mysql_shell_version | default(mysql_version) }}/greatsql-shell-{{ mysql_shell_version | default(mysql_version) }}-Linux-glibc{{ mysql_glibc_version }}-{{ ansible_architecture }}.tar.xz
 mysql_download_url: "{{ __mysql_download_url[mysql_privoder].mysql_url }}"
 mysql_shell_download_url: "{{ __mysql_download_url[mysql_privoder].mysql_shell_url }}"
